update : social link, about me & project content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+  <title>Home</title>
 
   <link rel="stylesheet" href="assets/styles/main.css">
 </head>
@@ -26,6 +26,9 @@
           <a href="./pages/project.html" class="menu-nav__link">My Project</a>
         </li>
         <li class="menu-nav__item">
+          <a href="./project.html" class="menu-nav__link">Skills</a>
+        </li>
+        <li class="menu-nav__item">
           <a href="./pages/contact.html" class="menu-nav__link">Contact Me</a>
         </li>
       </ul>
@@ -35,7 +38,7 @@
   <main>
     <section class="home">
       <div class="home__info">
-        <h2>Hi My Name Is</h2>
+        <h2>Hello, My Name Is</h2>
 
         <h1 class="home__name">
           Andreas <span class="home__name--last">Kurniawan</span>
@@ -47,16 +50,10 @@
       </div>
 
       <div class="social-icons">
-        <a href="#!">
-          <i class="fab fa-twitter fa-2x"></i>
+        <a href="https://www.linkedin.com/in/andreas-kurniawan/" target="_blank">
+          <i class="fab fa-linkedin fa-2x"></i>
         </a>
-        <a href="#!">
-          <i class="fab fa-facebook fa-2x"></i>
-        </a>
-        <a href="#!">
-          <i class="fab fa-instagram fa-2x"></i>
-        </a>
-        <a href="#!">
+        <a href="https://github.com/AndreasCKurniawan" target="_blank">
           <i class="fab fa-github fa-2x"></i>
         </a>
       </div>
