--- a/pages/about.html
+++ b/pages/about.html
@@ -26,6 +26,9 @@
           <a href="./project.html" class="menu-nav__link">My Project</a>
         </li>
         <li class="menu-nav__item">
+          <a href="./project.html" class="menu-nav__link">Skills</a>
+        </li>
+        <li class="menu-nav__item">
           <a href="./contact.html" class="menu-nav__link">Contact Me</a>
         </li>
       </ul>
@@ -36,43 +39,47 @@
     <section class="about">
      <div class="about__bio-image">
         <h2 class="text-secondary">BIO</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere voluptatem ad et exercitationem tempore nobis aliquid tenetur quod ipsa dolore veritatis provident nam molestiae commodi accusamus perferendis, consequatur doloremque dolor.</p>
+        <p>
+          A Fullstack Web Developer who have interest in programming and 3D, have logical thinking, target oriented, high interest in new thing and willing to learn new thing
+        </p>
      </div>
 
      <div class="jobs">
+       <h2 class="text-secondary">Work Experience</h2>
        <div class="jobs__job">
-         <h2 class="text-secondary">2017 - current</h2>
-         <h3>Google</h3>
-         <h6>Fullstack Developer</h6>
-         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum obcaecati quidem sunt eius vitae nesciunt corrupti sapiente laudantium cum aperiam!</p>
+         <h2 class="text-secondary">March - April & June - July 2019</h2>
+         <h3>Dunia Print</h3>
+         <h5>Practical Work as Computer Technician</h6>
+         <p>
+           Work as Computer Technician to repairing PC, Laptop, Printer, and fixing network problem in Goverment Institution.
+         </p>
        </div>
-
-       <div class="jobs__job">
-        <h2 class="text-secondary">2017 - current</h2>
-        <h3>Google</h3>
-        <h6>Fullstack Developer</h6>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum obcaecati quidem sunt eius vitae nesciunt corrupti sapiente laudantium cum aperiam!</p>
-      </div>
-
-      <div class="jobs__job">
-        <h2 class="text-secondary">2017 - current</h2>
-        <h3>Google</h3>
-        <h6>Fullstack Developer</h6>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum obcaecati quidem sunt eius vitae nesciunt corrupti sapiente laudantium cum aperiam!</p>
-      </div>      
      </div>
 
+     <div class="educations">
+      <h2 class="text-secondary">Educations</h2>
+      <div class="educations__education">
+        <h2 class="text-secondary">2021 - 2021</h2>
+        <h3>Arkademy tech Academy</h3>
+        <h5>Fullstack Website Developer</h6>
+        <p>Learning how to create website from scratch using NodeJS and ExpressJS for Backend, MySQL for the Database, ReactJS and NextJS for Frontend, and React Native for Mobile Development.</p>
+      </div>
+      <div class="educations__education">
+        <h2 class="text-secondary">2017 - 2020</h2>
+        <h3>SMK N 1 Sukoharjo</h3>
+        <h5>Computer and Network Engineering</h6>
+        <p>
+          Learning about Basic Programming using C++, Network Configuration Using Mikrotik and Cicso, Repairing Computer Hardware, System Admisintration Using Debian 6, Basic Desain with Corel and Photoshop, and much more.
+        </p>
+      </div>
+    </div>
+
       <div class="social-icons">
-        <a href="#!">
-          <i class="fab fa-twitter fa-2x"></i>
+        <a href="https://www.linkedin.com/in/andreas-kurniawan/" target="_blank">
+          <i class="fab fa-linkedin fa-2x"></i>
         </a>
-        <a href="#!">
-          <i class="fab fa-facebook fa-2x"></i>
-        </a>
-        <a href="#!">
-          <i class="fab fa-instagram fa-2x"></i>
-        </a>
-        <a href="#!">
+
+        <a href="https://github.com/AndreasCKurniawan" target="_blank">
           <i class="fab fa-github fa-2x"></i>
         </a>
       </div>
