--- a/pages/project.html
+++ b/pages/project.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me</title>
+  <title>My Project</title>
 
   <link rel="stylesheet" href="../assets/styles/main.css">
 </head>
@@ -26,6 +26,9 @@
           <a href="#" class="menu-nav__link active">My Project</a>
         </li>
         <li class="menu-nav__item">
+          <a href="./project.html" class="menu-nav__link">Skills</a>
+        </li>
+        <li class="menu-nav__item">
           <a href="./contact.html" class="menu-nav__link">Contact Me</a>
         </li>
       </ul>
@@ -44,28 +47,70 @@
        <div class="projects__item">
          <img src="../assets/img/project-1.jpg" alt="">
          <div class="projects__btns">
-           <a href="#!" class="projects__btn">
+           <a href="https://seanard-ticketing.netlify.app/" target="_blank" class="projects__btn">
              <i class="fas fa-eye"></i>  Preview
            </a>
-           <a href="#!" class="projects__btn">
+           <a href="https://github.com/AndreasCKurniawan/Tickitz-TicketBooking" target="_blank" class="projects__btn">
             <i class="fab fa-github"></i>  Preview
           </a>
          </div>
        </div>
+
+       <div class="projects__item">
+        <img src="../assets/img/project-2.jpg" alt="">
+        <div class="projects__btns">
+          <a href="https://clover-hire.netlify.app/" target="_blank" class="projects__btn">
+            <i class="fas fa-eye"></i>  Preview
+          </a>
+          <a href="https://github.com/AhmadZaky19/clover-frontend" target="_blank" class="projects__btn">
+           <i class="fab fa-github"></i>  Preview
+         </a>
+        </div>
+      </div>
+
+      <div class="projects__item">
+        <img src="../assets/img/project-3.jpg" alt="">
+        <div class="projects__btns">
+          <a href="https://next-e-wallet.vercel.app/" target="_blank" class="projects__btn">
+            <i class="fas fa-eye"></i>  Preview
+          </a>
+          <a href="https://github.com/AndreasCKurniawan/Z-Wallet" target="_blank" class="projects__btn">
+           <i class="fab fa-github"></i>  Preview
+         </a>
+        </div>
+      </div>
+
+      <div class="projects__item">
+        <img src="../assets/img/project-4.jpg" alt="">
+        <div class="projects__btns">
+          <a href="https://panda-coffee.vercel.app/" target="_blank" class="projects__btn">
+            <i class="fas fa-eye"></i>  Preview
+          </a>
+          <a href="https://github.com/riyaraa/pandaCoffee-frontend" target="_blank" class="projects__btn">
+           <i class="fab fa-github"></i>  Preview
+         </a>
+        </div>
+      </div>
+
+      <div class="projects__item">
+        <img src="../assets/img/project-5.jpg" alt="">
+        <div class="projects__btns">
+          <a href="https://drive.google.com/file/d/1e01cbmgH9FjOKW8Sh3jbItoPCK4MiNxj/view" target="_blank" class="projects__btn">
+            <i class="fas fa-eye"></i>  Preview
+          </a>
+          <a href="https://github.com/AndreasCKurniawan/RNTickitzMobile" target="_blank" class="projects__btn">
+           <i class="fab fa-github"></i>  Preview
+         </a>
+        </div>
+      </div>
      
      </div>
 
       <div class="social-icons">
-        <a href="#!">
-          <i class="fab fa-twitter fa-2x"></i>
+        <a href="https://www.linkedin.com/in/andreas-kurniawan/" target="_blank">
+          <i class="fab fa-linkedin fa-2x"></i>
         </a>
-        <a href="#!">
-          <i class="fab fa-facebook fa-2x"></i>
-        </a>
-        <a href="#!">
-          <i class="fab fa-instagram fa-2x"></i>
-        </a>
-        <a href="#!">
+        <a href="https://github.com/AndreasCKurniawan" target="_blank">
           <i class="fab fa-github fa-2x"></i>
         </a>
       </div>
