--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me</title>
+  <title>Contact Me</title>
 
   <link rel="stylesheet" href="../assets/styles/main.css">
 </head>
@@ -24,6 +24,9 @@
         </li>
         <li class="menu-nav__item">
           <a href="./project.html" class="menu-nav__link">My Project</a>
+        </li>
+        <li class="menu-nav__item">
+          <a href="./project.html" class="menu-nav__link">Skills</a>
         </li>
         <li class="menu-nav__item">
           <a href="#" class="menu-nav__link active">Contact Me</a>
@@ -53,16 +56,10 @@
       </div>
 
       <div class="social-icons">
-        <a href="#!">
-          <i class="fab fa-twitter fa-2x"></i>
+        <a href="https://www.linkedin.com/in/andreas-kurniawan/" target="_blank">
+          <i class="fab fa-linkedin fa-2x"></i>
         </a>
-        <a href="#!">
-          <i class="fab fa-facebook fa-2x"></i>
-        </a>
-        <a href="#!">
-          <i class="fab fa-instagram fa-2x"></i>
-        </a>
-        <a href="#!">
+        <a href="https://github.com/AndreasCKurniawan" target="_blank">
           <i class="fab fa-github fa-2x"></i>
         </a>
       </div>
